added rquired parameter to cray-drydock

--- a/manifestgen/files/master_manifest.yaml
+++ b/manifestgen/files/master_manifest.yaml
@@ -10,6 +10,8 @@ charts: # Will install/upgrade charts in the order below
   - name: "cray-drydock"
     namespace: "loftsman"
     version: 1.0.2
+    overrides:
+    - imagesHost="{repos[docker]}"
   - name: "cray-istio-init"
     namespace: "istio-system"
     version: 1.1.3
