adding cray-replicant to release manually

--- a/manifestgen/files/master_manifest.yaml
+++ b/manifestgen/files/master_manifest.yaml
@@ -79,3 +79,9 @@ charts: # Will install/upgrade charts in the order below, latest versions of cha
       helm: true
     overrides:
     - cray-service.imagesHost="{repos[docker]}"
+  - name: "cray-replicant"
+    namespace: "services"
+    waitFor:
+      helm: true
+    overrides:
+    - cray-service.imagesHost="{repos[docker]}"
