adding cray-tokens to master manifest

--- a/manifestgen/files/master_manifest.yaml
+++ b/manifestgen/files/master_manifest.yaml
@@ -190,3 +190,8 @@ charts: # Will install/upgrade charts in the order below, latest versions of cha
     namespace: "services"
     overrides:
       - cray-service.imagesHost="{repos[docker]}"
+
+  - name: "cray-tokens"
+    namespace: "services"
+    overrides:
+    - cray-service.imagesHost="{repos[docker]}"
