SKERN-2051 Add ncn-custom to master_manifest
The Shasta-OS ncn-customization chart needs to be added to the
master_manifest.yaml file.

Test Description:
The chart has been installed on Surly1 using loftsman and the
procedure provided by the Cloud team for testing charts using
Shasta H/W. No errors during deployment and kubernetes pods worked
as expected.

Target Release: None

--- a/manifestgen/files/master_manifest.yaml
+++ b/manifestgen/files/master_manifest.yaml
@@ -195,3 +195,9 @@ charts: # Will install/upgrade charts in the order below, latest versions of cha
     namespace: "services"
     overrides:
     - cray-service.imagesHost="{repos[docker]}"
+
+  # SHASTA-OS
+  - name: "ncn-customization"
+    namespace: "services"
+    overrides:
+    - cray-service.imagesHost="{repos[docker]}"
