SKERN-1760 SKERN-1761 Add CPS to master_manifest
This adds the cray-cps to the master_manifest.yml

Tested on Craystack and Fanta

--- a/manifestgen/files/master_manifest.yaml
+++ b/manifestgen/files/master_manifest.yaml
@@ -224,3 +224,9 @@ charts: # Will install/upgrade charts in the order below, latest versions of cha
     namespace: "services"
     overrides:
     - cray-service.imagesHost="{repos[docker]}"
+
+  - name: "cray-cps"
+    namespace: "services"
+    overrides:
+    - broker.imagesHost="{repos[docker]}"
+    - cm-pm.imagesHost="{repos[docker]}"
