--- a/manifestgen/files/master_manifest.yaml
+++ b/manifestgen/files/master_manifest.yaml
@@ -132,7 +132,7 @@ charts: # Will install/upgrade charts in the order below, latest versions of cha
     - cray-service.imagesHost="{repos[docker]}"
 
   # CRUS
-  -name: cray-crus
+  -name: "cray-crus"
    namespace: "services"
    overrides:
    - cray-service.imagesHost="{repos[docker]}"
