CASMCMS-3266: Add ARS/S3 to manifest

--- a/manifestgen/files/master_manifest.yaml
+++ b/manifestgen/files/master_manifest.yaml
@@ -203,6 +203,12 @@ charts: # Will install/upgrade charts in the order below, latest versions of cha
     overrides:
     - cray-service.imagesHost="{repos[docker]}"
 
+  # CMS
+  - name: "cray-ars3"
+    namespace: "services"
+    overrides:
+    - cray-service.imagesHost="{repos[docker]}"
+
   # SHASTA-OS
   - name: "ncn-customization"
     namespace: "services"
