SKERN-1765: NMD-service: install via Helm
This task is to convert the NMD-service to install via Helm. The proposed approach is to change only the nmd-service installation to Helm and continue using Ansible to set up the interim NFS solution until the new storage approach is implemented by SKERN-1881.

Test procedure: Verify that nmd-service installs via Helm

--- a/manifestgen/files/master_manifest.yaml
+++ b/manifestgen/files/master_manifest.yaml
@@ -224,3 +224,10 @@ charts: # Will install/upgrade charts in the order below, latest versions of cha
     namespace: "services"
     overrides:
     - cray-service.imagesHost="{repos[docker]}"
+
+  # Cray Node Memory Dump Service
+  - name: "nmd-service"
+    namespace: "services"
+    overrides:
+    - cray-service.imagesHost="{repos[docker]}"
+
