--- a/manifestgen/files/master_manifest.yaml
+++ b/manifestgen/files/master_manifest.yaml
@@ -223,6 +223,10 @@ charts: # Will install/upgrade charts in the order below, latest versions of cha
     namespace: "services"
     overrides:
     - cray-service.imagesHost="{repos[docker]}"
+  - name: "gitea"
+    namespace: "services"
+    overrides:
+    - cray-service.imagesHost="{repos[docker]}"
 
   # SHASTA-OS
   - name: "ncn-customization"
