Added HMS collector.

--- a/manifestgen/files/master_manifest.yaml
+++ b/manifestgen/files/master_manifest.yaml
@@ -212,6 +212,10 @@ charts: # Will install/upgrade charts in the order below, latest versions of cha
     namespace: "services"
     overrides:
       - cray-service.imagesHost="{repos[docker]}"
+  - name: "cray-hms-hmcollector"
+    namespace: "services"
+    overrides:
+      - cray-service.imagesHost="{repos[docker]}"
 
   - name: "cray-tokens"
     namespace: "services"
