The HMS collector doesn't use the cray-service base chart, so the override for the imagesHost variable needs to not include that.

--- a/manifestgen/files/master_manifest.yaml
+++ b/manifestgen/files/master_manifest.yaml
@@ -210,7 +210,7 @@ charts: # Will install/upgrade charts in the order below, latest versions of cha
   - name: "cray-hms-hmcollector"
     namespace: "services"
     overrides:
-      - cray-service.imagesHost="{repos[docker]}"
+      - imagesHost="{repos[docker]}"
 
   - name: "cray-tokens"
     namespace: "services"
