--- a/manifestgen/files/master_manifest.yaml
+++ b/manifestgen/files/master_manifest.yaml
@@ -234,6 +234,10 @@ charts: # Will install/upgrade charts in the order below, latest versions of cha
     namespace: "services"
     overrides:
     - cray-service.imagesHost="{repos[docker]}"
+  - name: "capsules-ui"
+    namespace: "services"
+    overrides:
+    - cray-service.imagesHost="{repos[docker]}"
 
   # CRAY-CPS
   - name: "cray-cps"
