--- a/manifestgen/files/master_manifest.yaml
+++ b/manifestgen/files/master_manifest.yaml
@@ -40,8 +40,7 @@ charts: # Will install/upgrade charts in the order below, latest versions of cha
     waitFor:
       helm: true
     overrides:
-    - opa.image="{repos[docker]}/openpolicyagent/opa"
-    - opa.mgmt.image="{repos[docker]}/openpolicyagent/kube-mgmt"
+    - imagesHost="{repos[docker]}"
   - name: "cray-prometheus-operator"
     namespace: "kube-monitoring"
     waitFor:
