CASMPET-214: Add keycloak to the master manifest
Keycloak must be deployed via loftsman now. The keycloak Helm chart
is in the keycloak-installer git repository.

--- a/manifestgen/files/master_manifest.yaml
+++ b/manifestgen/files/master_manifest.yaml
@@ -140,6 +140,10 @@ charts: # Will install/upgrade charts in the order below, latest versions of cha
     namespace: "services"
     overrides:
     - cray-service.imagesHost="{repos[docker]}"
+  - name: "keycloak"
+    namespace: "services"
+    overrides:
+    - cray-service.imagesHost="{repos[docker]}"
 
   # CRUS
   - name: "cray-crus"
