CASMPET-206: Deploy node-discovery via loftsman
Adds the new cray-node-discovery chart to the manifest so that
loftsman deploys it.

The cray-node-discovery chart is in the spet / node-discovery
git repo.

--- a/manifestgen/files/master_manifest.yaml
+++ b/manifestgen/files/master_manifest.yaml
@@ -144,6 +144,10 @@ charts: # Will install/upgrade charts in the order below, latest versions of cha
     namespace: "services"
     overrides:
     - cray-service.imagesHost="{repos[docker]}"
+  - name: "cray-node-discovery"
+    namespace: "services"
+    overrides:
+    - imagesHost="{repos[docker]}"
 
   # CRUS
   - name: "cray-crus"
