Added HMS SLS to master manifest.

--- a/manifestgen/files/master_manifest.yaml
+++ b/manifestgen/files/master_manifest.yaml
@@ -225,6 +225,10 @@ charts: # Will install/upgrade charts in the order below, latest versions of cha
     namespace: "services"
     overrides:
       - cray-service.imagesHost="{repos[docker]}"
+  - name: "cray-hms-sls"
+    namespace: "services"
+    overrides:
+      - cray-service.imagesHost="{repos[docker]}"
 
   - name: "cray-tokens"
     namespace: "services"
