update ahoy container to use python 3, add jenkins build test for that container

--- a/Dockerfile.ahoy
+++ b/Dockerfile.ahoy
@@ -1,6 +1,6 @@
-FROM python:2-alpine
+FROM python:3-alpine
 
-RUN apk add --no-cache py-pip python-dev build-base
+RUN apk add --no-cache py-pip python3-dev build-base
 
 COPY . /manifestgen
 WORKDIR /manifestgen
