CASMPET-2735 Add toYaml filter to prevent bad parsing
(cherry picked from commit e6938caa646c8a347c3b83516a0fef1112a57df9)

--- a/tests/files/customizations_v1.yaml
+++ b/tests/files/customizations_v1.yaml
@@ -22,6 +22,9 @@ spec:
       - "bar"
     a-dash: "dashed"
     aLink: "{{ tests.aList }}"
+    aNull:
+      test: null
+      more: "None"
     aYaml:
       foo:
         bar:
@@ -37,13 +40,15 @@ spec:
         values:
           ip: "{{ network.static_ips.api_gw }}"
           domain: "{{ dns.domains.base }}"
+          someNull: "{{tests.aNull | toYaml }}"
           someList: "{{ tests.aList }}"
           some-Dash: "{{ tests['a-dash'] }}"
           someLink: "{{ tests['aLink'] }}"
           someSelfLink: "{{ kubernetes.services['cray-istio']['values']['someLink'] }}"
           someMultiLineNoComment: "Foo\nBar\n"
           someMultiLineWithComment: "# Foo\n#Bar\n"
-          someYaml: "{{ tests['aYaml'] }}"
+          someYaml: "{{ tests['aYaml'] | toYaml }}"
+          someStaticNull: null
       cray-shs:
         repository: "{{ repositories.helm.default }}"
         values:
