--- a/tests/files/locked_manifest.yaml
+++ b/tests/files/locked_manifest.yaml
@@ -7,8 +7,8 @@ repositories:
   docker: registry.local
   helm: charts.local
 charts: # Will install/upgrade charts in the order below, latest versions of charts are auto-detected at manifestgen time if explicit version is not provided here
-  - name: "cray-istio"
-    namespace: "services"
+  - name: "some-chart"
+    namespace: "some-namespace"
     version: "0.0.1"
-  - name: "cray-etcd-operator"
-    namespace: "services"
+  - name: "some-other-chart"
+    namespace: "some-other-namespace"
