Refactor support for --version

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,7 @@
 [metadata]
+maintainer = Zachary Crisler
+maintainer_email = zachary.crisler@hpe.com
+version = attr: manifestgen.__version__
 license_file = LICENSE.txt
 
 [bdist_wheel]
