CASMPET-3731: Add regression test

--- a/tests/files/manifests_v1beta1.yaml
+++ b/tests/files/manifests_v1beta1.yaml
@@ -7,4 +7,5 @@ spec:
     - name: some-chart
       namespace: some-namespace
       version: 3.2.0
-      values: {}
+      values:
+        notCustomized: True
