CASMCLOUD-1209 Fix missing YAML dependency
The new buildenvironment does not have PyYAML installed. Manifestgen's
build was relaying on the installed dependencies in the old build
environment, nothing actually was installing manifestgen's dependencies
directly.

This installs manifestgen's dependencies.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
-maintainer = Zachary Crisler
-maintainer_email = zachary.crisler@hpe.com
+maintainer = Russell Bunch
+maintainer_email = doomslayer@hpe.com
 version = attr: manifestgen.__version__
-license_file = LICENSE.txt
+license_file = LICENSE
 
 [bdist_wheel]
 universal = 1
