--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 recursive-include manifestgen/schemas *
 recursive-include manifestgen/files *
-include LICENSE.txt
+include LICENSE
 include version
 
 recursive-exclude __pycache__  *.pyc *.pyo *.orig
