--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -8,15 +8,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0 # Also fetch git-tags
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
         python-version: '3.6'
-    - name: requirements
-      run: |
-        pip install nox
     - name: nox
       env:
         GIT_REPO_NAME: "${GITHUB_REPOSITORY#*/}"
       run: |
+        pip install .[ci]
         nox
