Snyk does not auto select `setup.py`
This also installs `manifestgen` before invoking Snyk as to ensure all
dependencies are present for the scan.

Snyk also pulls `setup.py` into a temporary directory with no other
files present. In doing so, it can't resolve either the `.git` nor
`PKG-INFO` directory as it reads `setup.py`. Snyk was failing to scan
`manifestgen` with the recent build on tag merge (#15), to fix this the
`get_version()` function now has a case to check the installed
`manifestgen` with `pkg_resources`.

--- a/.github/workflows/snyk.yaml
+++ b/.github/workflows/snyk.yaml
@@ -1,18 +1,25 @@
 name: Snyk
+
 on: push
+
 jobs:
   security:
+    name: Security Scanning
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/python@master
-      #  continue-on-error: true # To make sure that SARIF upload gets called
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # Also fetch git-tags
+      - name: Setup Snyk
+        uses: snyk/actions/setup@master
+      - name: Setup Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.6'
+      - name: Snyk monitor
+        run: |
+          pip install -U wheel
+          pip install .
+          snyk test --file=setup.py --command=python3
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      #  with:
-      #    args: --sarif-file-output=snyk.sarif
-      #- name: Upload result to GitHub Code Scanning
-      #  uses: github/codeql-action/upload-sarif@v1
-      #  with:
-      #    sarif_file: snyk.sarif
