MTL-1708 Build & Publish SP4 RPMs
Continue to build and publish SP3 RPMs.
For SP3, build with Python 3.9 since it's the latest available from the
SUSE repos. For SP4 use Python 3.10 for the same reason.

--- a/.github/workflows/snyk.yaml
+++ b/.github/workflows/snyk.yaml
@@ -5,6 +5,9 @@ on: push
 jobs:
   security:
     name: Security Scanning
+    strategy:
+      matrix:
+        python: ['3.10']
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -15,7 +18,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v3
         with:
-          python-version: '3.10'
+          python-version: ${{ matrix.python }}
       - name: Snyk monitor
         run: |
           pip install -U wheel
