--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -1,10 +1,12 @@
-name: Python package
+name: Lint and Unit Tests
 
 on: [push]
 
 jobs:
   nox:
-    name: Lint and Unit Tests
+    strategy:
+      matrix:
+        python: ['3.10']
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -13,7 +15,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: '3.10'
+        python-version: ${{ matrix.python }}
     - name: nox
       env:
         GIT_REPO_NAME: "${GITHUB_REPOSITORY#*/}"
